--- a/config.properties
+++ b/config.properties
@@ -1,1 +1,4 @@
-number.one = one
+project.name.1 = apigateway
+project.name.2 = configserver
+project.name.3 = coursefeign
+project.name.4 = courseservice
