--- a/courseapplication_one-dev.properties
+++ b/courseapplication_one-dev.properties
@@ -1,4 +1,4 @@
-project.name.1 = apigateway
-project.name.2 = configserver
+server.name.1 = apigateway
+server.name.2 = configserver
 project.name.3 = coursefeign
 project.name.4 = courseservice
